--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -87,7 +87,7 @@ Execute the below command to import users database
  ```
 
 
-Under RedisInsight GUI, click on “Memory Analysis” under Browser.
+Under RedisInsight GUI, click on “Memory Analyzer” under Browser.
 Before you click on “Analysis,” ensure that you store dump.rdb at the right location.
 If you’re on Mac, the Redis dump file is located under /usr/local/var/db/redis
 
@@ -233,7 +233,7 @@ key:*
 ![alt_text](images/image11.png "image_tooltip")
 
 
-## Memory Analyser
+## Memory Analyzer
 
 Memory Analyzer lets you search a key or key patterns and get related information regarding it with other stats. You can apply various filters and aggregations using our advance filters feature.
 
