Added Elasticache Tutorial

--- a/docs/explore/redisinsight/index-redisinsight.mdx
+++ b/docs/explore/redisinsight/index-redisinsight.mdx
@@ -133,6 +133,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  </div>
 
 
+  <div class="col">
+     <RedisCard
+        title="Autodiscover Elasticache"
+        imgPath=""
+        description="Autodiscover Amazon Elasticache instances using RedisInsight"
+        preview="redisinsight.png"
+        page="/explore/redisinsight/autodiscover"
+        />
+ </div>
+
+
+
 </div>
 
 
