--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-autodiscover
 title: Autodiscover Elasticache Redis caches using RedisInsight
-sidebar_label: Autodiscover Elasticache Instances using RedisInsight
+sidebar_label: Autodiscover Elasticache Redis caches using RedisInsight
 slug: /explore/redisinsight/autodiscover
 ---
 
@@ -11,7 +11,10 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-RedisInsight lets you automatically add Redis Enterprise Software and Redis Enterprise Cloud databases. For Redis Cloud, auto-discovery is supported only for Flexible or Annual subscriptions. Auto-discovery for Redis Software to automatically discover and add Redis Software databases to RedisInsight. RedisInsight allows you to automatically discover Amazon Elasticache instances flawlessly.
+RedisInsight lets you automatically add Redis Enterprise Software and Redis Enterprise Cloud databases. For Redis Cloud, auto-discovery is supported only for Flexible or Annual subscriptions. Auto-discovery for Redis Software to automatically discover and add Redis Software databases to RedisInsight. 
+
+RedisInsight also allows you to automatically discover Elasticache Redis caches. 
+
 
 :::important
 
