--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -225,7 +225,7 @@ $ python3 dataloader.py
 
 
 
-## Addtional Resources
+## Additional Resources
 
 - [RedisTimeSeries Tutorial](/howtos/redistimeseries)
 - [Analyze Your Redis commands using RedisInsight Profiler tool](explore/redisinsight/profiler)
