--- a/docs/howtos/redisgears/index-redisgears.mdx
+++ b/docs/howtos/redisgears/index-redisgears.mdx
@@ -64,6 +64,7 @@ Open a file called wordcount.py, and add the following code:
 The results here show the number of occurences of each word in all of our strings. So, we’ve effectively processed the data in our Redis database all at once, in a batch.
 
 
-### Next Step
+### References
 
-- Learn more about RedisGears in the [Quick Start tutorial](https://oss.redislabs.com/redisgears/intro.html).
+- [How to build a Fraud Detection System using RedisGears and RedisBloom](/howtos/frauddetection)
+- [Writing Your Serverless function using RedisGears Browser Tool](/explore/redisinsight/redisgears)
