--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -11,9 +11,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-RedisInsight lets you automatically add Redis Enterprise Software and Redis Enterprise Cloud databases. For Redis Cloud, auto-discovery is supported only for Flexible or Annual subscriptions. Auto-discovery for Redis Software to automatically discover and add Redis Software databases to RedisInsight. 
-
-RedisInsight also allows you to automatically discover Elasticache Redis caches. 
+RedisInsight is a 100% free Redis GUI that allows you to visualise, monitor, and optimize while developing your applications with Redis. It provides an intuitive and efficient GUI for Redis allowing developers like you to interact with your databases and manage your data. RedisInsight lets you automatically add Redis Enterprise Software and Redis Enterprise Cloud databases. RedisInsight also allows you to automatically discover Elasticache Redis caches. 
 
 
 :::important
