--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -212,5 +212,9 @@ In a clustered database, each node can have different values for slowlog.  You w
 
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Unified Search and Analytics using RediSearch Browser Tool](/explore/redisinsight/redisearch)
+- [Managing time-series data using RedisTimeSeries Browser Tool](/explore/redisinsight/redistimeseries)
+- [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
+- [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
 - [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
 
