--- a/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
+++ b/docs/explore/redisinsight/autodiscover/index-autodiscover.mdx
@@ -157,6 +157,10 @@ Add the discovered instance:
 
 ### References
 
-- [Slowlog Configuration using RedisInsight](/explore/redisinsight/slowlog)
 - [Explore Redis keys using RedisInsight browser tool](/explore/redisinsight/browser)
 - [Memory Analysis using RedisInsight](/explore/redisinsight/memoryanalyzer)
+- [Unified Search and Analytics using RediSearch Browser Tool](/explore/redisinsight/redisearch)
+- [Managing time-series data using RedisTimeSeries Browser Tool](/explore/redisinsight/redistimeseries)
+- [Analyze Your Redis commands using RedisInsight Profiler tool](/explore/redisinsight/profiler)
+- [Debugging Redis using RedisInsight Slowlog Tool](/explore/redisinsight/slowlog)
+- [Using Redis Streams with RedisInsight](/explore/redisinsight/streams)
