adding .NET section, couple minor cleanup items

--- a/docs/develop/index-develop.mdx
+++ b/docs/develop/index-develop.mdx
@@ -39,8 +39,16 @@ Find documentation, sample code and tools to develop with your favorite language
         page="/develop/node"
         />
  </div>
-</div>
+ <div class="col">
+    <RedisCard
+      title=".NET and Redis"
+      description="Getting Started with Redis in .NET"
+      page="/develop/dotnet"
+    />
 
+  </div>
+
+</div>
  <div class="row">
 
  <div class="col">
@@ -65,8 +73,8 @@ Find documentation, sample code and tools to develop with your favorite language
 
  <div class="col">
     <RedisCard
-        title="Php and Redis"
-        description="Getting Started with Php and Redis"                   
+        title="PHP and Redis"
+        description="Getting Started with PHP and Redis"
         page="/develop/php"
         />
  </div>
