--- a/docs/develop/php/index-php.mdx
+++ b/docs/develop/php/index-php.mdx
@@ -47,7 +47,7 @@ pecl install phpredis
 
 The following code creates a connection to Redis using Phpredis
 
-```
+```php
 <?php
  
 $redis = new Redis();
