--- a/docs/develop/ruby/index-ruby.mdx
+++ b/docs/develop/ruby/index-ruby.mdx
@@ -88,7 +88,7 @@ bundle info redis
 
 The following code creates a connection to Redis using redis-rb:
 
-```
+```ruby
 require 'redis'
 redis = Redis.new(host: "localhost", port: 6379, db: 11)
 redis.set("mykey", "hello world")
