--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-dotnet
-title: Redis in .NET
+title: .NET and Redis
 sidebar_label: .NET
 slug: /develop/dotnet/
 ---
@@ -250,3 +250,11 @@ Below are few of these apps. [Click here to access the complete lists of apps](h
 </div>
 
 </div>
+
+### Additional Resources
+
+- [Using C# with Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
+- [Using SSL and StackExchange.Redis](https://docs.redislabs.com/latest/rs/references/client_references/client_csharp/)
+
+
+
