--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -23,7 +23,7 @@ There are a few ways to Install the Package:
   values={[
     {label: '.NET CLI', value: 'cli'},
     {label: 'PM Console', value: 'pmConsole'},
-    {label: 'Package Refernce', value: 'csproj'},
+    {label: 'Package Reference', value: 'csproj'},
     {label: 'NuGet GUI', value: 'gui'}    
   ]}>
   <TabItem value="cli">
