--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -42,7 +42,7 @@ It should display Docker Engine Server and Client version successfully.
 
 
  ```bash
-  docker run -d -p 6379:6379 redislabs/redismd
+  docker run -d -p 6379:6379 redislabs/redismod
  ```
 
 
