--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -48,6 +48,10 @@ It should display Docker Engine Server and Client version successfully.
 
 ### Step 3. Connect to Redis database
 
+You can either use [redis-cli](/create/homebrew) or use [RedisInsight](/explore/redisinsight/getting-started) to connect to Redis database.
+Let's try using redis-cli as shown below:
+
+
 
  ```bash
   redis-cli
