--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -117,10 +117,10 @@ You can now use the FT.SEARCH to search your database, for example, to search al
   FT.SEARCH idx:movies * SORTBY release_year ASC RETURN 2 title release_year
  ```
 
-To test drive rest of Redis modules, please visit the links mentioned under "Reference" section.
+To test drive rest of Redis modules, please visit the links mentioned under "References" section.
 
 
-### Further References
+### References
 
  - [Redismod GITHUB repository](https://github.com/RedisLabsModules/redismod)
  - [Connecting to the database using RedisInsight](https://developer.redislabs.com/explore/redisinsight/)
