Fixes oddly worded sentence.

--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -60,7 +60,7 @@ For your first steps with Node.js and Redis, this article will show how to use t
 
   ```
 
-Find more information about Redis & io-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/ioredis)".
+Find more information about Redis & io-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/ioredis)" repository.
 
   </TabItem>
   <TabItem value="node_redis">
