Fixed another oddly worded sentence, also adds missing period.

--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -105,7 +105,7 @@ Find more information about Redis & io-redis connections in the "[Redis Connect]
 
   ```
 
-Find more information about Redis & node-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/node-redis)".
+Find more information about Redis & node-redis connections in the "[Redis Connect](https://github.com/redis-developer/redis-connect/tree/master/node.js/node-redis)" repository.
 
 
   </TabItem>
@@ -116,7 +116,7 @@ Find more information about Redis & node-redis connections in the "[Redis Connec
 ###  Redis Marketplace
 
 Redis Marketplace is like an “App Store” for Redis sample apps. You can easily find apps for your preferred frameworks and languages.
-Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com)
+Below are few of these apps. [Click here to access the complete lists of apps](https://marketplace.redislabs.com).
 
 <div class="row text--center">
 
