minor grammatical fix

--- a/docs/develop/dotnet/index-dotnet.mdx
+++ b/docs/develop/dotnet/index-dotnet.mdx
@@ -88,7 +88,7 @@ var db = _redis.GetDatabase();
 
 ## Step 5. Use the connection
 
-Now that you've retreived the connection to the database, all that's left is to use it. Here are some simple operations;
+Now that you've retreived the connection to the database, all that's left is to use it. Here are some simple operations:
 
 <Tabs
   defaultValue="ping"
