Updated overview page with descriptions and lead in text.

--- a/docs/develop/node/node-crash-course/index-node-crash-course.mdx
+++ b/docs/develop/node/node-crash-course/index-node-crash-course.mdx
@@ -10,6 +10,13 @@ import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
+This is a complete online course for Node.js developers wanting to learn about Redis, 
+the ioredis client and the Redis modules ecosystem.
+
+In this course, you'll learn about using Redis with Node.js through a blend of video and 
+text-based training.  You can also get hands-on with some optional workshop exercises 
+where you'll add new functionality to an existing Node.js application.  
+
 <div class="row">
  <div class="col">
      <RedisCard
@@ -22,7 +29,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="2. What is Redis?"
-        description="Description goes here..."
+        description="Introducing Redis - the database that developers love!"
         page="/develop/node/nodecrashcourse/whatisredis"
         />
   </div>
@@ -30,7 +37,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="3. Redis and Node.js"
-        description="Description goes here..."
+        description="The ioredis client for Node.js."
         page="/develop/node/nodecrashcourse/redisandnodejs"
         />
   </div>
@@ -40,7 +47,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="4. Introducing RedisInsight"
-        description="Description goes here..."
+        description="A visual tool for managing Redis."
         page="/develop/node/nodecrashcourse/introducingredisinsight"
         />
   </div>
@@ -48,7 +55,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="5. Sample Application Overview"
-        description="Description goes here..."
+        description="Introducing the sample application."
         page="/develop/node/nodecrashcourse/sampleapplicationoverview"
         />
   </div>
@@ -56,7 +63,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="6. Running the Application"
-        description="Description goes here..."
+        description="Install, configure and run the sample application."
         page="/develop/node/nodecrashcourse/runningtheapplication"
         />
   </div>
@@ -66,7 +73,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="7. Domain Objects with Hashes"
-        description="Description goes here..."
+        description="Modeling domain objects with Redis Hashes."
         page="/develop/node/nodecrashcourse/domainobjectswithhashes"
         />
   </div>
@@ -74,7 +81,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="8. Introduction to Modules"
-        description="Description goes here..."
+        description="Extending the capabilities of Redis with modules."
         page="/develop/node/nodecrashcourse/introductiontomodules"
         />
   </div>
@@ -82,7 +89,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="9. RedisJSON"
-        description="Description goes here..."
+        description="Storing JSON documents in Redis with the RedisJSON module."
         page="/develop/node/nodecrashcourse/redisjson"
         />
   </div>
@@ -92,7 +99,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="10. RediSearch"
-        description="Description goes here..."
+        description="Indexing and querying Hashes with RediSearch."
         page="/develop/node/nodecrashcourse/redisearch"
         />
   </div>
@@ -100,7 +107,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="11. Checkins with Streams"
-        description="Description goes here..."
+        description="Using Redis Streams to handle a data fire hose."
         page="/develop/node/nodecrashcourse/checkinswithstreams"
         />
   </div>
@@ -108,7 +115,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="12. Managing Success"
-        description="Description goes here..."
+        description="How Redis helps your Node.js application to scale."
         page="/develop/node/nodecrashcourse/managingsuccess"
         />
   </div>
@@ -118,7 +125,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="13. Caching"
-        description="Description goes here..."
+        description="Using Redis as a cache to speed up user experience."
         page="/develop/node/nodecrashcourse/caching"
         />
   </div>
@@ -126,7 +133,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="14. Session Storage"
-        description="Description goes here..."
+        description="Horizontal scaling with Redis as a session store."
         page="/develop/node/nodecrashcourse/sessionstorage"
         />
   </div>
@@ -134,7 +141,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="15. Advanced Streams"
-        description="Description goes here..."
+        description="Consumer groups - collaborative stream processing."
         page="/develop/node/nodecrashcourse/advancedstreams"
         />
   </div>
@@ -144,7 +151,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
  <div class="col">
      <RedisCard
         title="16. RedisBloom"
-        description="Description goes here..."
+        description="A look at probabilistic data structures with the RedisBloom module."
         page="/develop/node/nodecrashcourse/redisbloom"
         />
   </div>
@@ -152,7 +159,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
    <div class="col">
      <RedisCard
         title="17. Course Wrap Up"
-        description="Description goes here..."
+        description="Wrap up and next steps."
         page="/develop/node/nodecrashcourse/coursewrapup"
         />
   </div>
